# axum-boilerplate

./: Cargo.toml  LICENSE  README.md
src/: error.rs  main.rs  model.rs
src/web/: routes_login.rs
tests/: quick_dev.rs
