[package]
name = "axum-boilerplate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
# axum web server
axum = "0.6"
# Serde / JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { verson = "0.4", features = ["fs"] }


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
